--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
               <div class="u-layout-col">
                 <div class="u-container-style u-layout-cell u-left-cell u-size-30 u-layout-cell-1">
                   <div class="u-container-layout u-container-layout-1">
-                    <h1 class="u-custom-font u-text u-title u-text-2">Kadamb</h1>
+                    <h1 class="u-custom-font u-text u-title u-text-2"><i><b>Kadamb</b></i></h1>
                     <h4 class="u-custom-font u-text u-text-body-alt-color u-text-font u-text-1">We make sense out of data</h4>
                   </div>
                 </div>
@@ -263,10 +263,9 @@
               <div class="u-layout-row">
                 <div class="u-align-left u-container-style u-layout-cell u-right-cell u-size-60 u-layout-cell-3">
                   <div class="u-container-layout u-container-layout-3">
-                    <p class="u-text u-text-palette-5-light-3 u-text-3">We combine local knowledge with global
-                      expertise, strategy with design, empathy with creativity, meaning with magic. Reach out to discuss
-                      how we might help you accelerate change.<br>
-                      <br><b>Duis aute irure dolor in reprehenderit</b>
+                    <p class="u-text u-text-palette-5-light-3 u-text-3">Organizations run on backlashes of uncertainty. Right collection of a data set and making sense out of it can reduce this horror. We believe taking a scientific approach, interpreting the right hows and whys and a concrete analysis is the root system of running a successful organization. We provide that centralized space which you can reach out to for all your business problems.
+                      <br><br><b>We combine local knowledge with global expertise, strategy with design, empathy with creativity, meaning with magic. Reach out to discuss how we might help you accelerate change.
+                      Duis aute irure dolor in reprehenderit</b>
                     </p>
                     <a href="index.html#carousel_64ac" data-page-id="2206810918"
                       class="u-border-none u-btn u-btn-round u-button-style u-color-scheme-summer-time u-color-style-multicolor-1 u-palette-1-base u-radius-50 u-btn-1">Learn
@@ -288,11 +287,7 @@
         <source src="./videos/videoplayback.mp4" type="video/mp4">
       </video>
 
-      <p class="u-text u-text-2 mb-5 content"> <strong>In mollis nunc sed id semper risus in hendrerit gravida. Aliquet enim tortor at auctor
-        urna nunc id cursus. Risus at ultrices mi tempus imperdiet. Sapien pellentesque habitant morbi tristique
-        senectus et netus. Id cursus metus aliquam eleifend mi in. Quis commodo odio aenean sed. Sollicitudin ac orci
-        phasellus egestas tellus. Id velit ut tortor pretium. mperdiet. Sapien pellentesque habitant morbi tristique
-        senectus et netus. Id cursus metus aliquam eleifend mi </strong> <br>
+      <p class="u-text u-text-2 mb-5 content"> <strong>Kadamb is a centralized root system which, with its data science and intelligence capabilities has held tight the solidifying spectrum of a number of firms. We offer scientific services to make all your decisions data driven and built on actionable insights. Whether it is to upscale your businesses, or to check reliability of your processes, or study and enhance customer experience, Kadamb is your one stop solution to ANALYSE, ADAPT and ACT. We have branched our services into a variety of industries, making them unrestricted to just a particular type of business. </strong> <br>
       </p>
 
     </div>
@@ -514,9 +509,8 @@
                           </path>
                         </g>
                       </svg></span>
-                    <h5 class="u-text u-text-palette-1-base u-text-1">strategy</h5>
-                    <p class="u-text u-text-palette-5-dark-2 u-text-2">Duis aute irure dolor in reprehenderit in
-                      voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+                    <h5 class="u-text u-text-palette-1-base u-text-1">Statistical Thinking</h5>
+                    <p class="u-text u-text-palette-5-dark-2 u-text-2">Briliant minds working at Kadam start churning as soon as you hand over the data to them which helps them to move in the right direction from the beginning and not just produce mechanized results. This enables us to make difference between a game changing insight and an expensive blind hunch</p>
                   </div>
                 </div>
               </div>
@@ -535,9 +529,8 @@
                           d="M52,3c-2.757,0-5,2.243-5,5v2.268L7.964,22.645C7.781,20.607,6.084,19,4,19c-2.206,0-4,1.794-4,4v11c0,2.206,1.794,4,4,4  c2.084,0,3.781-1.607,3.964-3.645l3.368,1.068c-0.506,0.455-0.913,1.03-1.138,1.722c-0.328,1.014-0.241,2.097,0.246,3.051  c0.486,0.954,1.313,1.66,2.326,1.987l14.27,4.623c0.403,0.131,0.818,0.195,1.23,0.195c0.625,0,1.246-0.148,1.819-0.441  c0.954-0.486,1.66-1.313,1.988-2.326c0.235-0.727,0.249-1.489,0.063-2.214L47,46.732V49c0,2.757,2.243,5,5,5s5-2.243,5-5V8  C57,5.243,54.757,3,52,3z M30.172,43.616c-0.164,0.506-0.518,0.919-0.995,1.162c-0.477,0.244-1.019,0.287-1.523,0.125L13.383,40.28  c-0.505-0.164-0.918-0.517-1.161-0.995c-0.244-0.478-0.289-1.019-0.125-1.523c0.274-0.846,1.061-1.384,1.905-1.384  c0.203,0,0.41,0.031,0.613,0.097l14.271,4.623C29.935,41.438,30.512,42.567,30.172,43.616z M6,34c0,1.103-0.897,2-2,2s-2-0.897-2-2  V23c0-1.103,0.897-2,2-2s2,0.897,2,2v0.268v10.465V34z M8,32.268v-7.535l39-12.366v32.268L8,32.268z M55,49c0,1.654-1.346,3-3,3  s-3-1.346-3-3v-1.634V9.634V8c0-1.654,1.346-3,3-3s3,1.346,3,3V49z">
                         </path>
                       </svg></span>
-                    <h5 class="u-text u-text-palette-2-base u-text-3">Results</h5>
-                    <p class="u-text u-text-palette-5-dark-2 u-text-4">Duis aute irure dolor in reprehenderit in
-                      voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+                    <h5 class="u-text u-text-palette-2-base u-text-3">Technical Acumen</h5>
+                    <p class="u-text u-text-palette-5-dark-2 u-text-4">We are highly qualified and trained professionals who not only claim so because of their universities but because of their intellectual and adaptive capabilities. Our workforce ensures right fit of technical skills with respect to the domain they are working on and continuously improvise it based on changing business environment</p>
                   </div>
                 </div>
                 <div
@@ -564,9 +557,8 @@
                           d="M59.972,20.164c0.007-0.041,0.011-0.081,0.013-0.123c0.002-0.049,0.001-0.096-0.003-0.145  c-0.004-0.042-0.01-0.082-0.02-0.123c-0.011-0.048-0.026-0.094-0.044-0.14c-0.009-0.024-0.011-0.049-0.022-0.072  c-0.008-0.017-0.022-0.03-0.031-0.047c-0.009-0.017-0.013-0.035-0.023-0.052l-10-16c-0.046-0.073-0.1-0.139-0.161-0.197  c-0.001-0.001-0.002-0.001-0.003-0.002c-0.086-0.081-0.188-0.139-0.297-0.185c-0.014-0.006-0.023-0.018-0.038-0.024  c-0.011-0.004-0.023-0.002-0.034-0.005c-0.101-0.034-0.205-0.057-0.314-0.057h-38c-0.108,0-0.211,0.023-0.31,0.056  c-0.011,0.003-0.022,0.001-0.032,0.005c-0.015,0.005-0.024,0.017-0.038,0.023c-0.104,0.043-0.202,0.099-0.287,0.175  c-0.005,0.005-0.012,0.008-0.017,0.012c-0.062,0.058-0.117,0.125-0.163,0.198l-10,16c-0.01,0.016-0.014,0.035-0.023,0.052  c-0.009,0.017-0.023,0.03-0.031,0.047c-0.011,0.023-0.013,0.048-0.023,0.072c-0.018,0.046-0.033,0.092-0.044,0.14  c-0.009,0.041-0.016,0.082-0.02,0.124C0,19.945-0.001,19.993,0.001,20.041c0.002,0.042,0.006,0.082,0.013,0.123  c0.008,0.048,0.021,0.095,0.037,0.142c0.013,0.039,0.027,0.077,0.045,0.115c0.009,0.018,0.012,0.038,0.022,0.056  c0.016,0.029,0.04,0.051,0.058,0.078c0.014,0.021,0.022,0.044,0.039,0.064l28.989,35.986c0.002,0.003,0.004,0.005,0.006,0.007  l0.005,0.007c0.003,0.004,0.008,0.005,0.011,0.009c0.082,0.099,0.184,0.174,0.295,0.234c0.03,0.016,0.058,0.03,0.089,0.043  c0.121,0.051,0.249,0.087,0.383,0.087c0.114,0,0.229-0.02,0.343-0.061c0.017-0.006,0.028-0.02,0.045-0.027  c0.051-0.021,0.091-0.055,0.137-0.084c0.076-0.048,0.147-0.098,0.206-0.163c0.014-0.015,0.035-0.022,0.048-0.038l29-36  c0.016-0.02,0.024-0.044,0.039-0.064c0.019-0.027,0.042-0.049,0.058-0.078c0.01-0.018,0.013-0.038,0.022-0.056  c0.018-0.038,0.032-0.075,0.045-0.115C59.95,20.259,59.964,20.213,59.972,20.164z M32.095,4.993h15.459l-4.86,13.045L32.095,4.993z   M40.892,18.993H19.095L29.993,5.58L40.892,18.993z M17.222,18.125L12.423,4.993h15.469L17.222,18.125z M41.593,20.993  L29.818,52.599L18.269,20.993H41.593z M49.221,6.246l7.967,12.748H44.472L49.221,6.246z M10.756,6.259l4.653,12.734H2.798  L10.756,6.259z M16.14,20.993l10.839,29.664L3.083,20.993H16.14z M32.39,51.423l11.337-30.43h13.176L32.39,51.423z">
                         </path>
                       </svg></span>
-                    <h5 class="u-text u-text-palette-1-base u-text-5">Expertise</h5>
-                    <p class="u-text u-text-palette-5-dark-2 u-text-6">Duis aute irure dolor in reprehenderit in
-                      voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+                    <h5 class="u-text u-text-palette-1-base u-text-5">Business Acumen</h5>
+                    <p class="u-text u-text-palette-5-dark-2 u-text-6">We understand that ulltimately all our skills and technical know-how is going to be used into building and structuring a great business. Hence, we focus on a right mix of technical and business mindset that prove to deliver right product catering to our clients needs</p>
                   </div>
                 </div>
               </div>
@@ -603,9 +595,8 @@
                           </g>
                         </g>
                       </svg></span>
-                    <h5 class="u-text u-text-palette-2-base u-text-7">Awards</h5>
-                    <p class="u-text u-text-palette-5-dark-2 u-text-8">Duis aute irure dolor in reprehenderit in
-                      voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+                    <h5 class="u-text u-text-palette-2-base u-text-7">Communication Skills</h5>
+                    <p class="u-text u-text-palette-5-dark-2 u-text-8">Not only does our analysis communicate effectively but our channelized and well structured communication channels make sure that we get proper understanding of our clients objectives and needs and accordingly act in a correct manner.</p>
                   </div>
                 </div>
                 <div
@@ -647,9 +638,8 @@
                           </g>
                         </g>
                       </svg></span>
-                    <h5 class="u-text u-text-palette-1-base u-text-9">Support</h5>
-                    <p class="u-text u-text-palette-5-dark-2 u-text-10">Duis aute irure dolor in reprehenderit in
-                      voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+                    <h5 class="u-text u-text-palette-1-base u-text-9">Curiosity</h5>
+                    <p class="u-text u-text-palette-5-dark-2 u-text-10">A good data scientist will take a request, implement it, and deliver the prediction or analysis with confidence. A great data scientist will come back asking for access to more data, or to interview users, or to try something new in the next iteration, because something he did triggered that curious itch. We are proud to nurture such a curious and never stopping manpower.</p>
                   </div>
                 </div>
               </div>
@@ -658,7 +648,7 @@
         </div>
       </div>
       <div style="display: flex; justify-content: right; width: 100%;" >
-        <a href="Industries.html" data-page-id="2206810918"
+        <a href="About.html#why_us" data-page-id="2206810918"
         style="font-size: larger; color: whitesmoke; text-decoration: none; margin-bottom: 30px;">Read more...</a>
       </div>
       </div>
@@ -689,8 +679,7 @@
                 <div class="u-container-style u-layout-cell u-size-30 u-white u-layout-cell-4">
                   <div class="u-container-layout u-container-layout-4">
                     <h3 class="u-text u-text-default u-text-1">About Us</h3>
-                    <p class="u-text u-text-2">We align leaders around a shared purpose and strategic story that
-                      catalyzes their business and brand to take action.</p>
+                    <p class="u-text u-text-2">Started in 2022 our company brings together a team of young, energetic and enthusiastic data scientists, engineers and financial analysts to help you with managing your essential data and providing predictive analytics solutions.</p>
                   </div>
                 </div>
                 <div class="u-container-style u-image u-layout-cell u-size-30 u-image-2">
@@ -713,8 +702,7 @@
                     d="m117.332031.332031h-64c-29.417969 0-53.332031 23.9375-53.332031 53.335938v64c0 29.394531 23.914062 53.332031 53.332031 53.332031h64c3.648438 0 7.210938-.382812 10.667969-1.089844v43.757813c0 47.058593-38.273438 85.332031-85.332031 85.332031h-21.335938c-11.796875 0-21.332031 9.558594-21.332031 21.332031 0 11.777344 9.535156 21.335938 21.332031 21.335938h21.335938c70.589843 0 128-57.410157 128-128v-160c0-29.398438-23.914063-53.335938-53.335938-53.335938zm0 0">
                   </path>
                 </svg></span>
-              <h3 class="u-text u-text-body-alt-color u-text-default u-text-3">Teamwork is the ability to work
-                together toward a common vision.&nbsp;</h3>
+              <h3 class="u-text u-text-body-alt-color u-text-default u-text-3">We aim to cater to your needs in retail, financial services, consumer analytics and big data support for your industry. At our present capacity, we're already catering to several industry giants all over the nation and clients from the overseas as well. &nbsp;</h3>
             </div>
           </div>
             <div class="u-size-20">
@@ -741,8 +729,7 @@
                           d="m117.332031.332031h-64c-29.417969 0-53.332031 23.9375-53.332031 53.335938v64c0 29.394531 23.914062 53.332031 53.332031 53.332031h64c3.648438 0 7.210938-.382812 10.667969-1.089844v43.757813c0 47.058593-38.273438 85.332031-85.332031 85.332031h-21.335938c-11.796875 0-21.332031 9.558594-21.332031 21.332031 0 11.777344 9.535156 21.335938 21.332031 21.335938h21.335938c70.589843 0 128-57.410157 128-128v-160c0-29.398438-23.914063-53.335938-53.335938-53.335938zm0 0">
                         </path>
                       </svg></span>
-                    <h3 class="u-text u-text-body-alt-color u-text-default u-text-3">Teamwork is the ability to work
-                      together toward a common vision.&nbsp;</h3>
+                    <h3 class="u-text u-text-body-alt-color u-text-default u-text-3"> We aim at improving your growth and support you with bringing human excellence and advanced technologies together to help you plan your next step accurately.&nbsp;</h3>
                   </div>
                 </div>
                 <div
@@ -924,7 +911,7 @@
               loading="lazy" />
           </div>
 
-          <p class="text-center">Data science where the real magic begins and dreams comes ture </p>
+          <p class="text-center">  </p>
 
           <ul class="list-unstyled d-flex flex-row justify-content-center">
             <!-- <li>
@@ -1035,7 +1022,7 @@
 
     <!-- Copyright -->
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
-      © 2020 Copyright
+      ©  2022 Copyright
     </div>
     <!-- Copyright -->
   </footer>
