--- a/Industries.html
+++ b/Industries.html
@@ -327,7 +327,7 @@
             <img src="./images/logo.jpg" height="70" alt="" loading="lazy" />
           </div>
 
-          <p class="text-center">Data science where the real magic begins and dreams comes ture </p>
+          <p class="text-center">  </p>
 
           <ul class="list-unstyled d-flex flex-row justify-content-center">
             <!-- <li>
@@ -431,7 +431,7 @@
 
     <!-- Copyright -->
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
-      © 2020 Copyright
+      ©  2022 Copyright
     </div>
     <!-- Copyright -->
   </footer>
