fixes, content added

--- a/Support.html
+++ b/Support.html
@@ -31,7 +31,7 @@
   <meta property="og:type" content="website">
 </head>
 <div class="preloader">
-  <img class="preloader-image" src="./images/logo.jpg"  alt="">
+  <img class="preloader-image" src="./images/logo.png"  alt="">
 </div>
   <div class="preloaderlayer"></div>
 <body class="u-body">
@@ -227,7 +227,7 @@
         </div>
       </nav>
       <a href="index.html" class="u-image u-logo u-image-1" data-image-width="80" data-image-height="40">
-       <img src="./images/logo.jpg" class="positioninbetween u-logo-image u-logo-image-1">
+       <img src="./images/logo.png" class="positioninbetween u-logo-image u-logo-image-1">
       </a>
     </div>
   </header>
@@ -241,7 +241,7 @@
         <div class="u-accordion-item">
           <a class="active u-accordion-link u-border-1 u-border-active-grey-75 u-border-grey-15 u-border-hover-grey-75 u-border-no-left u-border-no-right u-border-no-top u-button-style u-text-black u-accordion-link-1"
             id="link-accordion-6327" aria-controls="accordion-6327" aria-selected="true">
-            <span class="u-accordion-link-text">Do you provide support?</span><span 
+            <span class="u-accordion-link-text">What will be the customer journey if we consider hiring Kadamb?</span><span 
               class="u-accordion-link-icon u-icon u-text-black u-icon-1">
 
               <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 16 16" style="">
@@ -257,10 +257,7 @@
             aria-labelledby="link-accordion-6327">
             <div class="u-container-layout u-container-layout-1">
               <div class="fr-view u-clearfix u-rich-text u-text">
-                <p>Answer. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur id suscipit ex.
-                  Suspendisse rhoncus laoreet purus quis elementum. Phasellus sed efficitur dolor, et ultricies sapien.
-                  Quisque fringilla sit amet dolor commodo efficitur. Aliquam et sem odio. In ullamcorper nisi nunc, et
-                  molestie ipsum iaculis sit amet.</p>
+                <p>You can enquire through our website and reach out to our contact information for all data related needs. We will get back to you and schedule meet ups for your requirements. The core management will review and analyse and frame objectives. Based on the same, an analyst will be appointed to your project and will stay in touch with you regularly regarding the updates.</p>
               </div>
             </div>
           </div>
@@ -268,7 +265,7 @@
         <div class="u-accordion-item">
           <a class="u-accordion-link u-border-1 u-border-active-grey-75 u-border-grey-15 u-border-hover-grey-75 u-border-no-left u-border-no-right u-border-no-top u-button-style u-text-black u-accordion-link-2"
             id="link-accordion-4aab" aria-controls="accordion-4aab" aria-selected="false">
-            <span class="u-accordion-link-text">What types of files I will get?</span><span
+            <span class="u-accordion-link-text">Where can I post my work related queries?</span><span
               class="u-accordion-link-icon u-icon u-text-black u-icon-2"><svg class="u-svg-link"
                 preserveAspectRatio="xMidYMin slice" viewBox="0 0 16 16" style="">
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-3470"></use>
@@ -281,10 +278,8 @@
             aria-labelledby="link-accordion-4aab">
             <div class="u-container-layout u-container-layout-2">
               <div class="u-clearfix u-rich-text u-text">
-                <p>Answer. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur id suscipit ex.
-                  Suspendisse rhoncus laoreet purus quis elementum. Phasellus sed efficitur dolor, et ultricies sapien.
-                  Quisque fringilla sit amet dolor commodo efficitur. Aliquam et sem odio. In ullamcorper nisi nunc, et
-                  molestie ipsum iaculis sit amet.</p>
+                <p>Our website provides query portal for all our clients where they can post their further expectations, dissatisfactions and grievances which make way directly to the upper management. A quick resolution henceforth takes place.
+                </p>
               </div>
             </div>
           </div>
@@ -292,7 +287,7 @@
         <div class="u-accordion-item">
           <a class="u-accordion-link u-border-1 u-border-active-grey-75 u-border-grey-15 u-border-hover-grey-75 u-border-no-left u-border-no-right u-border-no-top u-button-style u-text-black u-accordion-link-3"
             id="link-accordion-eb1f" aria-controls="accordion-eb1f" aria-selected="false">
-            <span class="u-accordion-link-text">How to get future updates?</span><span
+            <span class="u-accordion-link-text">Which Markets do you cover?</span><span
               class="u-accordion-link-icon u-icon u-text-black u-icon-3"><svg class="u-svg-link"
                 preserveAspectRatio="xMidYMin slice" viewBox="0 0 16 16" style="">
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-e07d"></use>
@@ -305,10 +300,52 @@
             aria-labelledby="link-accordion-eb1f">
             <div class="u-container-layout u-container-layout-3">
               <div class="fr-view u-clearfix u-rich-text u-text">
-                <p>Answer. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur id suscipit ex.
-                  Suspendisse rhoncus laoreet purus quis elementum. Phasellus sed efficitur dolor, et ultricies sapien.
-                  Quisque fringilla sit amet dolor commodo efficitur. Aliquam et sem odio. In ullamcorper nisi nunc, et
-                  molestie ipsum iaculis sit amet.</p>
+                <p>Our clientele covers a variety of geographical locations including but not limited to USA, UK, Australia and India.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="u-accordion-item">
+          <a class="u-accordion-link u-border-1 u-border-active-grey-75 u-border-grey-15 u-border-hover-grey-75 u-border-no-left u-border-no-right u-border-no-top u-button-style u-text-black u-accordion-link-3"
+            id="link-accordion-eb1f" aria-controls="accordion-eb1f" aria-selected="false">
+            <span class="u-accordion-link-text">What is the payment process?</span><span
+              class="u-accordion-link-icon u-icon u-text-black u-icon-3"><svg class="u-svg-link"
+                preserveAspectRatio="xMidYMin slice" viewBox="0 0 16 16" style="">
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-e07d"></use>
+              </svg><svg class="u-svg-content" viewBox="0 0 16 16" x="0px" y="0px" id="svg-e07d" style="">
+                <path d="M8,10.7L1.6,5.3c-0.4-0.4-1-0.4-1.3,0c-0.4,0.4-0.4,0.9,0,1.3l7.2,6.1c0.1,0.1,0.4,0.2,0.6,0.2s0.4-0.1,0.6-0.2l7.1-6
+	c0.4-0.4,0.4-0.9,0-1.3c-0.4-0.4-1-0.4-1.3,0L8,10.7z"></path>
+              </svg></span>
+          </a>
+          <div class="u-accordion-pane u-container-style u-accordion-pane-3" id="accordion-eb1f"
+            aria-labelledby="link-accordion-eb1f">
+            <div class="u-container-layout u-container-layout-3">
+              <div class="fr-view u-clearfix u-rich-text u-text">
+                <p>The payment process is simple and customised for each product. We offer lump sum project payments for a modeled solution requirements and monthly/quaterly subscriptions for recurring requirements. We raise invoices and accept all currencies which are native to you. The fact that we are not based in your country doesn't hamper the payment process. You will find us the most affordable player in the market.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="u-accordion-item">
+          <a class="u-accordion-link u-border-1 u-border-active-grey-75 u-border-grey-15 u-border-hover-grey-75 u-border-no-left u-border-no-right u-border-no-top u-button-style u-text-black u-accordion-link-3"
+            id="link-accordion-eb1f" aria-controls="accordion-eb1f" aria-selected="false">
+            <span class="u-accordion-link-text">How do you manage different time zones and what if we are unable to reach out to you because of the time difference?</span><span
+              class="u-accordion-link-icon u-icon u-text-black u-icon-3"><svg class="u-svg-link"
+                preserveAspectRatio="xMidYMin slice" viewBox="0 0 16 16" style="">
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-e07d"></use>
+              </svg><svg class="u-svg-content" viewBox="0 0 16 16" x="0px" y="0px" id="svg-e07d" style="">
+                <path d="M8,10.7L1.6,5.3c-0.4-0.4-1-0.4-1.3,0c-0.4,0.4-0.4,0.9,0,1.3l7.2,6.1c0.1,0.1,0.4,0.2,0.6,0.2s0.4-0.1,0.6-0.2l7.1-6
+	c0.4-0.4,0.4-0.9,0-1.3c-0.4-0.4-1-0.4-1.3,0L8,10.7z"></path>
+              </svg></span>
+          </a>
+          <div class="u-accordion-pane u-container-style u-accordion-pane-3" id="accordion-eb1f"
+            aria-labelledby="link-accordion-eb1f">
+            <div class="u-container-layout u-container-layout-3">
+              <div class="fr-view u-clearfix u-rich-text u-text">
+                <p>All our projects are given personal attention by individual analysts who work customly for each client during their respective time zone and as per their date requirements. We assure that our day or night doesn't be a barrier in your business decisions. If still a difficult time or date is about to occur due to geographical and cultural differences, it is informed well in advance.
+                </p>
               </div>
             </div>
           </div>
@@ -337,7 +374,7 @@
           <div
             class="rounded-circle bg-white shadow-1-strong d-flex align-items-center justify-content-center mb-4 mx-auto"
             style="width: 150px; height: 150px;">
-            <img src="./images/logo.jpg" height="70" alt=""
+            <img src="./images/logo.png" height="70" alt=""
               loading="lazy" />
           </div>
 
@@ -359,7 +396,7 @@
                 <i class="fa fa-youtube"></i>
               </a>
             </li> -->
-            <a class="text-white px-2" target="_blank" href="https://www.linkedin.com/">
+            <a class="text-white px-2" target="_blank" href="https://www.linkedin.com/company/kadamb-intelligence/">
               <h4><i class="fa fa-linkedin-square"></i></h4>
             </a>
           </li>
@@ -391,34 +428,39 @@
         <!--Grid column-->
 
 
+        
         <div class="col-lg-3 mx-auto  col-md-6 mb-4 mb-md-0">
+          <!-- <h5 class="text-uppercase margin-gap
+              margin-gap mb-4">Industries</h5>
+              
           <h5 class="text-uppercase margin-gap
               margin-gap mb-4">Industries</h5>
+              <h5 class="text-uppercase margin-gap
+              margin-gap mb-4">Industries</h5>
+              <h5 class="text-uppercase margin-gap
+              margin-gap mb-4">Industries</h5>
+              <h5 class="text-uppercase margin-gap
+              margin-gap mb-4">Industries</h5>   -->
 
-          <!-- <ul class="list-unstyled">
+          <ul class="list-unstyled">
             <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Retail</a>
+              <a href="/index.html" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Home</a>
             </li>
             <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Health Care</a>
+              <a href="/About.html" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>About</a>
             </li>
             <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Real State</a>
+              <a href="/Industries.html" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Industries</a>
             </li>
             <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Finance</a>
+              <a href="/Services.html" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Services</a>
             </li>
             <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Logistics</a>
+              <a href="/Support.html" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Support</a>
             </li>
-            <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Manufacturing</a>
-            </li> -->
-            <!-- <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Volunteer activities</a>
-            </li> --> 
-          </ul>
+          </ul> 
         </div>
+
 
         <!--Grid column-->
         <div class="col-lg-3 mx-auto  col-md-6 mb-4 mb-md-0">
@@ -427,13 +469,13 @@
 
           <ul class="list-unstyled">
             <li>
-              <p><i class="fa fa-solid fa-location-arrow"> &nbsp;</i>World Trade Park, Malviya nagar</p>
+              <p><i class="fa fa-solid fa-location-arrow"> &nbsp;</i>257, Guru Nanak Pura, Adarsh nagar,  Jaipur, Rajasthan, India</p>
             </li>
             <li>
-              <p><i class="fa fa-phone pe-2"></i>+ 01 234 567 89</p>
+              <p><i class="fa fa-phone pe-2"></i>+91 9314355550</p>
             </li>
             <li>
-              <p><i class="fa fa-envelope pe-2 mb-0"></i>contact@example.com</p>
+              <p><i class="fa fa-envelope pe-2 mb-0"></i>kadambintillegence@gmail.com</p>
             </li>
           </ul>
         </div>
@@ -449,23 +491,8 @@
     </div>
     <!-- Copyright -->
   </footer>
-  
-  <!-- ******************Old footer ************************** -->
-  <!-- <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-5185"><div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1"> © 2022 GitHub, Inc. All Rights Reserved.</p>
-      </div></footer>
-    <section class="u-backlink u-clearfix u-grey-80">
-      <a class="u-link" href="" target="_blank">
-        <span></span>
-      </a>
-      <p class="u-text">
-        <span></span>
-      </p>
-      <a class="u-link" href="" target="_blank">
-        <span></span>
-      </a>. 
-    </section> -->
-    <script src="./Scripts/Global.js"></script>
+
+  <script src="./Scripts/Global.js"></script>
 </body>
 
 </html>
