--- a/About.html
+++ b/About.html
@@ -34,7 +34,7 @@
 </head>
 
 <div class="preloader">
-  <img class="preloader-image" src="./images/logo.jpg"  alt="">
+  <img class="preloader-image" src="./images/logo.png"  alt="">
 </div>
   <div class="preloaderlayer"></div>
 
@@ -231,7 +231,7 @@
         </div>
       </nav>
       <a href="index.html" class="u-image u-logo u-image-1" data-image-width="80" data-image-height="40">
-       <img src="./images/logo.jpg" class="positioninbetween u-logo-image u-logo-image-1">
+       <img src="./images/logo.png" class="positioninbetween u-logo-image u-logo-image-1">
       </a>
     </div>
   </header>
@@ -244,9 +244,8 @@
       <div class="u-align-left u-container-style u-gradient u-group u-group-1">
         <div class="u-container-layout u-container-layout-1">
           <h2 class="u-text u-text-body-alt-color u-text-default u-text-1">About Us</h2>
-          <p class="u-text u-text-body-alt-color u-text-2">Ut enim ad minim veniam, quis nostrud exercitation ullamco
-            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-            esse cillum dolore eu fugiat nulla pariatur.</p>
+          <p class="u-text u-text-body-alt-color u-text-2">The tree of Kadamb (Neolamarckia Cadamba), has very long roots, thus showing our expertise and experience in the field. We here at Kadamb Intelligence, smartly analyze your data, thus providing you with best out of big chunks of data.
+          </p>
           <a href="./docs/brochure.pdf"
             class="u-active-palette-1-base u-border-none u-btn u-btn-round u-button-style u-hover-palette-1-base u-radius-50 u-text-active-white u-text-hover-white u-text-palette-1-base u-white u-btn-1"> <i class="fa fa-solid fa-download"> &nbsp;</i>brochure 
             </a>
@@ -254,10 +253,9 @@
       </div>
       <div class="alignitright u-align-left u-container-style u-gradient u-group u-group-1">
         <div class="u-container-layout u-container-layout-1">
-          <h2 class="u-text u-text-body-alt-color u-text-default u-text-1">About Us</h2>
-          <p class="u-text u-text-body-alt-color u-text-2">Ut enim ad minim veniam, quis nostrud exercitation ullamco
-            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-            esse cillum dolore eu fugiat nulla pariatur.</p>
+          <h2 class="u-text u-text-body-alt-color u-text-default u-text-1">Our Ideology</h2>
+          <p class="u-text u-text-body-alt-color u-text-2">The large network of barky stems shows the variety of services we provide and industries we serve. <br> <br>
+            The leaves of the tree shows our every single effort to bring satisfaction and success to your company.</p>
         </div>
       </div>
     </div>
@@ -273,17 +271,16 @@
           <div class="content pt-4 pt-lg-0">
             <h3>Our vision</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              In order to make the most advanced analytics solutions understandable for users, we have set a goal for ourselves. In order to accomplish this, we integrate decision logics, sophisticated mathematics, and ML into the way you operate your organisation. Using mathematics, data technologies and our buisness oriented minds, we can reorganise your business and uncomplicate decision-making, thus delivering success.
             </p>
-            <ul>
+            <!-- <ul>
               <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
               <li><i class="bi bi-check-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
               <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperd</li>
             </ul>
             <p>
               Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate tera noden carma palorp mades tera.
-            </p>
+            </p> -->
           </div>
         </div>
       </div>
@@ -302,17 +299,16 @@
           <div class="content pt-4 pt-lg-0">
             <h3>Why us</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              We here at Kadamb, are a bunch of experienced and intelligent people, which with their hardwork and dedication, bring success and satisfaction to your company. We will provide you with best costs around the globe and best services across the spectrum.
             </p>
             <ul>
-              <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-              <li><i class="bi bi-check-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-              <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperd</li>
+              <li><i class="bi bi-check-circle"></i> We combine businessintelligence and technology,thus delivering you thecharm of success.</li>
+              <li><i class="bi bi-check-circle"></i> We at Kadamb as a family, willnever let you down.</li>
+              <!-- <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperd</li> -->
             </ul>
-            <p>
+            <!-- <p>
               Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate tera noden carma palorp mades tera.
-            </p>
+            </p> -->
           </div>
         </div>
       </div>
@@ -334,7 +330,7 @@
           <div
             class="rounded-circle bg-white shadow-1-strong d-flex align-items-center justify-content-center mb-4 mx-auto"
             style="width: 150px; height: 150px;">
-            <img src="./images/logo.jpg" height="70" alt=""
+            <img src="./images/logo.png" height="70" alt=""
               loading="lazy" />
           </div>
 
@@ -357,7 +353,7 @@
               </a>
             </li>
             <li> -->
-              <a class="text-white px-2" target="_blank" href="https://www.linkedin.com/">
+              <a class="text-white px-2" target="_blank" href="https://www.linkedin.com/company/kadamb-intelligence/">
                 <h4><i class="fa fa-linkedin-square"></i></h4>
               </a>
             </li>
@@ -389,34 +385,39 @@
         <!--Grid column-->
 
 
+        
         <div class="col-lg-3 mx-auto  col-md-6 mb-4 mb-md-0">
           <!-- <h5 class="text-uppercase margin-gap
               margin-gap mb-4">Industries</h5>
+              
+          <h5 class="text-uppercase margin-gap
+              margin-gap mb-4">Industries</h5>
+              <h5 class="text-uppercase margin-gap
+              margin-gap mb-4">Industries</h5>
+              <h5 class="text-uppercase margin-gap
+              margin-gap mb-4">Industries</h5>
+              <h5 class="text-uppercase margin-gap
+              margin-gap mb-4">Industries</h5>   -->
 
           <ul class="list-unstyled">
             <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Retail</a>
+              <a href="/index.html" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Home</a>
             </li>
             <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Health Care</a>
+              <a href="/About.html" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>About</a>
             </li>
             <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Real State</a>
+              <a href="/Industries.html" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Industries</a>
             </li>
             <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Finance</a>
+              <a href="/Services.html" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Services</a>
             </li>
             <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Logistics</a>
+              <a href="/Support.html" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Support</a>
             </li>
-            <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Manufacturing</a>
-            </li> -->
-            <!-- <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Volunteer activities</a>
-            </li> --> 
-          </ul>
+          </ul> 
         </div>
+
 
         <!--Grid column-->
         <div class="col-lg-3 mx-auto  col-md-6 mb-4 mb-md-0">
@@ -425,13 +426,13 @@
 
           <ul class="list-unstyled">
             <li>
-              <p><i class="fa fa-solid fa-location-arrow"> &nbsp;</i>World Trade Park, Malviya nagar</p>
+              <p><i class="fa fa-solid fa-location-arrow"> &nbsp;</i>257, Guru Nanak Pura, Adarsh nagar,  Jaipur, Rajasthan, India</p>
             </li>
             <li>
-              <p><i class="fa fa-phone pe-2"></i>+ 01 234 567 89</p>
+              <p><i class="fa fa-phone pe-2"></i>+91 9314355550</p>
             </li>
             <li>
-              <p><i class="fa fa-envelope pe-2 mb-0"></i>contact@example.com</p>
+              <p><i class="fa fa-envelope pe-2 mb-0"></i>kadambintillegence@gmail.com</p>
             </li>
           </ul>
         </div>
@@ -448,24 +449,6 @@
     <!-- Copyright -->
   </footer>
 
-
-  <!--             ******************* Old footer ********************* -->
-  <!-- <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-5185"><div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1"> © 2022 GitHub, Inc. All Rights Reserved.</p>
-      </div></footer> -->
-
-  <!--          ****************Old space for links****************** -->
-  <!-- <section class="u-backlink u-clearfix u-grey-80">
-      <a class="u-link" href="" target="_blank">
-        <span></span>
-      </a>
-      <p class="u-text">
-        <span></span>
-      </p>
-      <a class="u-link" href="" target="_blank">
-        <span></span>
-      </a>. 
-    </section> -->
     <script src="./Scripts/Global.js"></script>
 </body>
 
