--- a/Services.html
+++ b/Services.html
@@ -31,7 +31,7 @@
   <meta property="og:type" content="website">
 </head>
 <div class="preloader">
-  <img class="preloader-image" src="./images/logo.jpg"  alt="">
+  <img class="preloader-image" src="./images/logo.png"  alt="">
 </div>
   <div class="preloaderlayer"></div>
 <body class="u-body">
@@ -227,7 +227,7 @@
         </div>
       </nav>
       <a href="index.html" class="u-image u-logo u-image-1" data-image-width="80" data-image-height="40">
-       <img src="./images/logo.jpg" class="positioninbetween u-logo-image u-logo-image-1">
+       <img src="./images/logo.png" class="positioninbetween u-logo-image u-logo-image-1">
       </a>
     </div>
   </header>
@@ -268,17 +268,16 @@
             <div class="content pt-4 pt-lg-0">
               <h3>Data Science</h3>
               <p class="fst-italic">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                magna aliqua.
+                Create data cleansing algorithms that find faulty, incomplete, inaccurate, and/or duplicate data in order to eliminate it from the system. Prepare data for analysis in a fraction of the time it would take otherwise. Remove as much resources and efforts from the cleaning process as possible.
+ 
               </p>
               <ul>
-                <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                <li><i class="bi bi-check-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperd</li>
+                <li><i class="bi bi-check-circle"></i> Patterns can be discovered in your historical and real-time data if statistical computing is used.</li>
+                <li><i class="bi bi-check-circle"></i> Take advantage of instant access to machine learning tools, business projections, and the opportunity to conduct your own what-if research.</li>
               </ul>
-              <p>
+              <!-- <p>
                 Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate tera noden carma palorp mades tera.
-              </p>
+              </p> -->
             </div>
           </div>
         </div>
@@ -296,17 +295,15 @@
             <div class="content pt-4 pt-lg-0">
               <h3>Data Analysis</h3>
               <p class="fst-italic">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                magna aliqua.
+                Improve the efficiency of your operations, improve the client experience, and uncover new possibilities. 
               </p>
               <ul>
-                <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                <li><i class="bi bi-check-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperd</li>
+                <li><i class="bi bi-check-circle"></i> Allowing your company users to apply machine learning and what-if analysis in their day-to-day job will provide them a competitive advantage.</li>
+                <li><i class="bi bi-check-circle"></i>  Your data may be used to unlock the potential of your organisation, allowing you to produce breakthrough insights, improve processes, and boost your return on investment.</li>
               </ul>
-              <p>
+              <!-- <p>
                 Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate tera noden carma palorp mades tera.
-              </p>
+              </p> -->
             </div>
           </div>
         </div>
@@ -323,19 +320,18 @@
           </div>
           <div class="col-lg-6 d-flex flex-column justify-contents-center padding_rl" data-aos="fade-left">
             <div class="content pt-4 pt-lg-0">
-              <h3>Data Engineering</h3>
+              <h3 style="margin-top: 70px;">Data Engineering</h3>
               <p class="fst-italic">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                magna aliqua.
+                Allowing your company users to apply machine learning and what-if analysis in their day-to-day job will provide them a competitive advantage.
               </p>
-              <ul>
+              <!-- <ul>
                 <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
                 <li><i class="bi bi-check-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
                 <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperd</li>
               </ul>
               <p>
                 Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate tera noden carma palorp mades tera.
-              </p>
+              </p> -->
             </div>
           </div>
         </div>
@@ -354,17 +350,16 @@
             <div class="content pt-4 pt-lg-0">
               <h3>Business Intelligence</h3>
               <p class="fst-italic">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                magna aliqua.
+                Make use of business intelligence to transform your data into actionable information. We can provide our experience and business intelligence services to help you design unique software from the ground up or upgrade your existing analytics systems. 
               </p>
               <ul>
-                <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                <li><i class="bi bi-check-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperd</li>
+                <li><i class="bi bi-check-circle"></i> Modern intelligence business solutions enable a greater number of employees to have access to and utilise the necessary information in order to make data-driven business choices.</li>
+                <li><i class="bi bi-check-circle"></i> We will assist you in identifying the most effective proven techniques for your company.</li>
+                <li><i class="bi bi-check-circle"></i> Our professionals will endeavour to acquire information about your organisation in order to better understand its requirements, and will then share their findings with you.</li>
               </ul>
-              <p>
+              <!-- <p>
                 Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate tera noden carma palorp mades tera.
-              </p>
+              </p> -->
             </div>
           </div>
         </div>
@@ -386,7 +381,7 @@
           <div
             class="rounded-circle bg-white shadow-1-strong d-flex align-items-center justify-content-center mb-4 mx-auto"
             style="width: 150px; height: 150px;">
-            <img src="./images/logo.jpg" height="70" alt=""
+            <img src="./images/logo.png" height="70" alt=""
               loading="lazy" />
           </div>
 
@@ -408,7 +403,7 @@
                 <i class="fa fa-youtube"></i>
               </a>
             </li> -->
-            <a class="text-white px-2" target="_blank" href="https://www.linkedin.com/">
+            <a class="text-white px-2" target="_blank" href="https://www.linkedin.com/company/kadamb-intelligence/">
               <h4><i class="fa fa-linkedin-square"></i></h4>
             </a>
           </li>
@@ -418,34 +413,39 @@
         <!--Grid column-->
 
 
+        
         <div class="col-lg-3 mx-auto  col-md-6 mb-4 mb-md-0">
           <!-- <h5 class="text-uppercase margin-gap
               margin-gap mb-4">Industries</h5>
+              
+          <h5 class="text-uppercase margin-gap
+              margin-gap mb-4">Industries</h5>
+              <h5 class="text-uppercase margin-gap
+              margin-gap mb-4">Industries</h5>
+              <h5 class="text-uppercase margin-gap
+              margin-gap mb-4">Industries</h5>
+              <h5 class="text-uppercase margin-gap
+              margin-gap mb-4">Industries</h5>   -->
 
           <ul class="list-unstyled">
             <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Retail</a>
+              <a href="/index.html" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Home</a>
             </li>
             <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Health Care</a>
+              <a href="/About.html" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>About</a>
             </li>
             <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Real State</a>
+              <a href="/Industries.html" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Industries</a>
             </li>
             <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Finance</a>
+              <a href="/Services.html" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Services</a>
             </li>
             <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Logistics</a>
+              <a href="/Support.html" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Support</a>
             </li>
-            <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Manufacturing</a>
-            </li> -->
-            <!-- <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Volunteer activities</a>
-            </li> --> 
-          </ul>
+          </ul> 
         </div>
+
 
         <!--Grid column-->
         <div class="col-lg-3 mx-auto  col-md-6 mb-4 mb-md-0">
@@ -454,13 +454,13 @@
 
           <ul class="list-unstyled">
             <li>
-              <p><i class="fa fa-solid fa-location-arrow"> &nbsp;</i>World Trade Park, Malviya nagar</p>
+              <p><i class="fa fa-solid fa-location-arrow"> &nbsp;</i>257, Guru Nanak Pura, Adarsh nagar,  Jaipur, Rajasthan, India</p>
             </li>
             <li>
-              <p><i class="fa fa-phone pe-2"></i>+ 01 234 567 89</p>
+              <p><i class="fa fa-phone pe-2"></i>+91 9314355550</p>
             </li>
             <li>
-              <p><i class="fa fa-envelope pe-2 mb-0"></i>contact@example.com</p>
+              <p><i class="fa fa-envelope pe-2 mb-0"></i>kadambintillegence@gmail.com</p>
             </li>
           </ul>
         </div>
@@ -477,7 +477,7 @@
     <!-- Copyright -->
   </footer>
 
-    <script src="./Scripts/Global.js"></script>
+  <script src="./Scripts/Global.js"></script>
 </body>
 
 </html>
