--- a/Services.html
+++ b/Services.html
@@ -322,7 +322,7 @@
             <div class="content pt-4 pt-lg-0">
               <h3 style="margin-top: 70px;">Data Engineering</h3>
               <p class="fst-italic">
-                Allowing your company users to apply machine learning and what-if analysis in their day-to-day job will provide them a competitive advantage.
+                Integrate your data warehouse systems in an easy and seamless manner. Automatically change data stored in data banks and deliver it to your data warehouse platform using a data transformation automation tool.
               </p>
               <!-- <ul>
                 <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
